; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_nfs4xdr.c_nfsd4_decode_destroy_session.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/nfsd/extr_nfs4xdr.c_nfsd4_decode_destroy_session.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfsd4_compoundargs = type { i32 }
%struct.nfsd4_destroy_session = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@DECODE_HEAD = common dso_local global i32 0, align 4
@NFS4_MAX_SESSIONID_LEN = common dso_local global i32 0, align 4
@DECODE_TAIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nfsd4_compoundargs*, %struct.nfsd4_destroy_session*)* @nfsd4_decode_destroy_session to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nfsd4_decode_destroy_session(%struct.nfsd4_compoundargs* %0, %struct.nfsd4_destroy_session* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.nfsd4_compoundargs*, align 8
  %5 = alloca %struct.nfsd4_destroy_session*, align 8
  store %struct.nfsd4_compoundargs* %0, %struct.nfsd4_compoundargs** %4, align 8
  store %struct.nfsd4_destroy_session* %1, %struct.nfsd4_destroy_session** %5, align 8
  %6 = load i32, i32* @DECODE_HEAD, align 4
  %7 = load i32, i32* @NFS4_MAX_SESSIONID_LEN, align 4
  %8 = call i32 @READ_BUF(i32 %7)
  %9 = load %struct.nfsd4_destroy_session*, %struct.nfsd4_destroy_session** %5, align 8
  %10 = getelementptr inbounds %struct.nfsd4_destroy_session, %struct.nfsd4_destroy_session* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @NFS4_MAX_SESSIONID_LEN, align 4
  %14 = call i32 @COPYMEM(i32 %12, i32 %13)
  %15 = load i32, i32* @DECODE_TAIL, align 4
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @READ_BUF(i32) #1

declare dso_local i32 @COPYMEM(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
